--- a/HelmWorkShop/smb-csi-dirver/storageclass-smb-samba.yaml
+++ b/HelmWorkShop/smb-csi-dirver/storageclass-smb-samba.yaml
@@ -3,16 +3,17 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: smb
+  name: smb-samba
 provisioner: smb.csi.k8s.io
 # https://github.com/kubernetes-csi/csi-driver-smb/blob/master/docs/driver-parameters.md#storage-class-usage
 parameters:
-  source: "//192.168.255.100/smb"
+  source: "//192.168.255.1/sololab"
+  subDIr: "infra"
   # if csi.storage.k8s.io/provisioner-secret is provided, will create a sub directory
   # with PV name under source
-  csi.storage.k8s.io/provisioner-secret-name: "smbcreds"
+  csi.storage.k8s.io/provisioner-secret-name: "smbcreds-samba"
   csi.storage.k8s.io/provisioner-secret-namespace: "kube-system"
-  csi.storage.k8s.io/node-stage-secret-name: "smbcreds"
+  csi.storage.k8s.io/node-stage-secret-name: "smbcreds-samba"
   csi.storage.k8s.io/node-stage-secret-namespace: "kube-system"
   # https://github.com/thinkier/k8s_minecrafting/blob/5dd8ae3ffc6c874fca4a927244574e2cc18e2bc5/_defunct/sc.yml
 reclaimPolicy: Retain
