re-org vyos 1.4 container place

--- a/HelmWorkShop/smb-csi-dirver/pv-smb-samba.yaml
+++ b/HelmWorkShop/smb-csi-dirver/pv-smb-samba.yaml
@@ -18,7 +18,7 @@ spec:
     readOnly: false
     volumeHandle: unique-volumeid
     volumeAttributes:
-      source: "//192.168.255.1/sololab"
+      source: "//192.168.255.1/share"
     nodeStageSecretRef:
       name: smbcreds-samba
       namespace: kube-system
