--- a/VagrantWorkShop/InfraSvc-Fedora37/Vagrantfile
+++ b/VagrantWorkShop/InfraSvc-Fedora37/Vagrantfile
@@ -12,53 +12,48 @@ Vagrant.configure("2") do |config|
 
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://vagrantcloud.com/search.
-  config.vm.box = "alpinelinux316-g2"
+  config.vm.box = "FEDORA37-G2"
 
   config.vm.provider "hyperv" do |hv, config|
-    hv.vmname = "InfraSvc-Alpine"
-    hv.maxmemory = 4096
+    hv.vmname = "InfraSvc-Fedora37"
     hv.memory = 1024
-    hv.cpus = 2
+    hv.maxmemory = 4096
+    hv.cpus = 4
     # config.trigger.before :'VagrantPlugins::HyperV::Action::StartInstance', type: :action do |trigger|
     #   trigger.info = "Run-Dos2Unix"
     #   trigger.run = {inline: "./Run-Dos2Unix.ps1"}
     # end
   end
-
+  
   config.vm.network "private_network", bridge: "Internal Switch"
   
   config.ssh.insert_key = false
   
-  config.vm.hostname = "InfraSvc-Alpine"
+  config.vm.hostname = "InfraSvc-Fedora37"
 
-  # config.vm.synced_folder "../../HelmWorkShop", "/var/vagrant/HelmWorkShop", type: "rsync", rsync__auto: true
   # config.vm.synced_folder "../../AnsibleWorkShop", "/var/vagrant/AnsibleWorkShop", type: "rsync", rsync__auto: true
-
-  # set static ip for this VM
-  config.vm.provision "file", source: "./interfaces.conf", destination: "/home/vagrant/interfaces"
-  config.vm.provision "shell", inline: "sudo cp /home/vagrant/interfaces /etc/network/interfaces"
-
-  # install k8s related tools
-  # for alpine
-  # config.vm.provision "shell", inline: "sudo apk add curl yq git ansible py3-pip helm helmfile"
-  # config.vm.provision "shell", inline: "ansible-galaxy collection install kubernetes.core"
-  # config.vm.provision "shell", inline: "sudo apk add bash lsblk nfs-utils open-iscsi"
-  # for others
-  # config.vm.provision "shell", inline: "sudo snap install helm --classic"
-
-  # set dns record for the cluster fqdn
-  config.vm.provision "shell", inline: "sudo sed -i '/^127.0.0.1/ s/$/ infra.sololab/' /etc/hosts"
+  # config.vm.synced_folder "../../HelmWorkShop", "/var/vagrant/HelmWorkShop", type: "rsync", rsync__auto: true
+  # config.vm.synced_folder "../../LocalWorkShop", "/var/vagrant/LocalWorkShop", type: "rsync", rsync__auto: true
+  config.vm.synced_folder "../../KubeWorkShop", "/var/vagrant/KubeWorkShop", type: "rsync", rsync__auto: true
 
   
-  # reboot for alpine
+  # config repo source
+  config.vm.provision "shell", path: "Set-CNRepo.sh"
+  
+  # extend root partition
+  config.vm.provision "shell", path: "Resize-Partition.sh"
+  
+  # set static ip
+  config.vm.provision "shell", path: "Set-StaticIP.sh"
+  
+  # reboot
   config.vm.provision "shell", reboot: true
 
   # https://github.com/kurokobo/awx-on-k3s
   # for china
   # https://serverok.in/wget-print-content-to-screen#:~:text=wget%20print%20content%20to%20screen%20wget%20is%20used,this%2C%20you%20can%20replace%20wget%20command%20with%20curl.
   # config.vm.provision "shell", inline: "wget -q -O /dev/stdout http://rancher-mirror.cnrancher.com/k3s/k3s-install.sh | K3S_TOKEN=SECRET INSTALL_K3S_MIRROR=cn INSTALL_K3S_EXEC=\"--cluster-init --write-kubeconfig-mode 644\" sh -"
-  # config.vm.provision "shell", inline: "wget -q -O /dev/stdout http://rancher-mirror.cnrancher.com/k3s/k3s-install.sh | INSTALL_K3S_MIRROR=cn INSTALL_K3S_EXEC=\"--write-kubeconfig-mode 644 --write-kubeconfig /home/vagrant/.kube/config\" sh -"
-  
+  # config.vm.provision "shell", inline: "wget -q -O /dev/stdout http://rancher-mirror.cnrancher.com/k3s/k3s-install.sh | INSTALL_K3S_MIRROR=cn INSTALL_K3S_EXEC=\"--write-kubeconfig-mode 644\" sh -"
   # for other country
   # config.vm.provision "shell", inline: "wget -q -O /dev/stdout https://get.k3s.io | sh -s - --write-kubeconfig-mode 644"
   
@@ -68,13 +63,17 @@ Vagrant.configure("2") do |config|
   # for others
   # config.vm.provision "shell", inline: "echo \"export KUBECONFIG=/etc/rancher/k3s/k3s.yaml\" >> ~/.bashrc"
   
-  # config.vm.provision "shell", inline: "sudo swapoff -a && sudo rc-update add cgroups default"
-  
-  # config.vm.provision "shell", inline: "sudo swapoff -a"
-  
-  # reboot for alpine
-  # config.vm.provision "shell", reboot: true
+  #config.vm.provision "shell", inline: "sudo swapoff -a && sudo rc-update add cgroups default"
+  # install helm
+  # for alpine
+  #config.vm.provision "shell", inline: "sudo apk add helm"
+  # for others
+  # config.vm.provision "shell", inline: "sudo snap install helm --classic"
+  # config.vm.provision "shell", inline: "sudo apt install helm -y"
 
+  # reboot for alpine
+  # config.vm.provision "shell", inline: "sudo reboot"
+  
   # Create a forwarded port mapping which allows access to a specific port
   # within the machine from a port on the host machine. In the example below,
   # accessing "localhost:8080" will access port 80 on the guest machine.
