--- a/KubeWorkShop/LLDAP/pod-lldap.yaml
+++ b/KubeWorkShop/LLDAP/pod-lldap.yaml
@@ -24,8 +24,10 @@ spec:
           memory: "128Mi"
           cpu: "500m"
       ports:
-        - containerPort: 17170
-        - containerPort: 3890
+        - name: web
+          containerPort: 17170
+        - name: ldap
+          containerPort: 3890
       volumeMounts:
         - name: lldap_data
           mountPath: /data
