--- a/VagrantWorkShop/VyOS-New/Vagrantfile
+++ b/VagrantWorkShop/VyOS-New/Vagrantfile
@@ -33,12 +33,12 @@ Vagrant.configure("2") do |config|
   config.vm.provision "shell", path: "./provisionConfig-LAN.sh"
   config.vm.provision "shell", path: "./provisionConfig-dns_forwarding.sh"
   config.vm.provision "shell", path: "./provisionConfig-dhcp_server.sh"
-  config.vm.provision "file", source: "./install.sh.bak", destination: "/home/vagrant/install-clash.sh"
-  config.vm.provision "file", source: "./finalConfig.sh", destination: "/home/vagrant/finalConfig.sh"
-  config.vm.provision "file", source: "./Add-Containers.sh", destination: "/home/vagrant/Add-Containers.sh"
-  config.vm.provision "file", source: "./Run-LLDAP.sh", destination: "/home/vagrant/Run-LLDAP.sh"
-  config.vm.provision "file", source: "./Run-Samba2.sh", destination: "/home/vagrant/Run-Samba2.sh"
-  config.vm.provision "file", source: "./samba", destination: "/home/vagrant/samba"
+  # config.vm.provision "file", source: "./install.sh.bak", destination: "/home/vagrant/install-clash.sh"
+  # config.vm.provision "file", source: "./finalConfig.sh", destination: "/home/vagrant/finalConfig.sh"
+  # config.vm.provision "file", source: "./Add-Containers.sh", destination: "/home/vagrant/Add-Containers.sh"
+  # config.vm.provision "file", source: "./Run-LLDAP.sh", destination: "/home/vagrant/Run-LLDAP.sh"
+  # config.vm.provision "file", source: "./Run-Samba2.sh", destination: "/home/vagrant/Run-Samba2.sh"
+  # config.vm.provision "file", source: "./samba", destination: "/home/vagrant/samba"
   # config.vm.provision "file", source: "./vyos-install-docker.sh", destination: "/home/vagrant/vyos-install-docker.sh"
   # config.vm.provision "file", source: "./docker-compose.vyos-pihole.yaml", destination: "/home/vagrant/docker-compose.yaml"
   # Disable automatic box update checking. If you disable this, then
