--- a/KubeWorkShop/FreeIPA/pod-freeipa.yaml
+++ b/KubeWorkShop/FreeIPA/pod-freeipa.yaml
@@ -10,7 +10,7 @@ spec:
   hostname: ipa.infra.sololab
   containers:
     - name: freeipa
-      image: docker.io/freeipa/freeipa-server:fedora-37
+      image: docker.io/freeipa/freeipa-server:fedora-37-4.10.1
       env:
         - name: TZ
           value: Asia/Shanghai
@@ -38,12 +38,10 @@ spec:
 
         - name: http
           containerPort: 80
-          hostPort: 80
-          # hostPort: 8080
+          hostPort: 8080
         - name: https
           containerPort: 443
-          hostPort: 443
-          # hostPort: 8443
+          hostPort: 8443
 
         - name: ldap
           containerPort: 389
