--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "AnsibleWorkShop/roles/xanmanning.k3s"]
 	path = AnsibleWorkShop/roles/xanmanning.k3s
 	url = https://github.com/PyratLabs/ansible-role-k3s.git
+[submodule "AnsibleWorkShop/roles/ansible-freeipa"]
+	path = AnsibleWorkShop/roles/ansible-freeipa
+	url = https://github.com/freeipa/ansible-freeipa.git
