add powerdns and update freeipa container deploy

--- a/KubeWorkShop/FreeIPA/pod-freeipa.yaml
+++ b/KubeWorkShop/FreeIPA/pod-freeipa.yaml
@@ -10,38 +10,40 @@ spec:
   hostname: ipa.infra.sololab
   containers:
     - name: freeipa
-      image: docker.io/freeipa/freeipa-server:fedora-37-4.10.1
+      image: docker.io/freeipa/freeipa-server:fedora-37-4.10.0
       env:
         - name: TZ
           value: Asia/Shanghai
         - name: IPA_SERVER_IP
-          value: ""
-          # value: "192.168.255.31"
+          # value: ""
+          value: "192.168.255.32"
         - name: IPA_SERVER_HOSTNAME
           value: ipa.infra.sololab
       resources:
         limits:
-          memory: "512Mi"
-          cpu: "500m"
+          memory: "1536Mi"
+          cpu: "1000m"
       # https://www.freeipa.org/page/V4/Replica_Conncheck
       # https://docs.podman.io/en/latest/markdown/podman-kube-play.1.html#container-fields
       ports:
         # https://github.com/sameersbn/docker-bind/issues/65
         - name: dns_tcp
-          hostIP: 192.168.255.31
           containerPort: 53
+          hostIP: 192.168.255.32
           protocol: TCP
         - name: dns_udp
-          hostIP: 192.168.255.31
+          hostIP: 192.168.255.32
           containerPort: 53
           protocol: UDP
 
         - name: http
           containerPort: 80
-          hostPort: 8080
+          hostIP: 192.168.255.32
+          hostPort: 80
         - name: https
           containerPort: 443
-          hostPort: 8443
+          hostIP: 192.168.255.32
+          hostPort: 443
 
         - name: ldap
           containerPort: 389
