--- a/VagrantWorkShop/InfraSvc-Fedora37/Vagrantfile
+++ b/VagrantWorkShop/InfraSvc-Fedora37/Vagrantfile
@@ -16,7 +16,7 @@ Vagrant.configure("2") do |config|
 
   config.vm.provider "hyperv" do |hv, config|
     hv.vmname = "InfraSvc-Fedora37"
-    hv.memory = 1024
+    hv.memory = 2048
     hv.maxmemory = 4096
     hv.cpus = 4
     # config.trigger.before :'VagrantPlugins::HyperV::Action::StartInstance', type: :action do |trigger|
@@ -29,7 +29,7 @@ Vagrant.configure("2") do |config|
   
   config.ssh.insert_key = false
   
-  config.vm.hostname = "InfraSvc-Fedora37"
+  config.vm.hostname = "ipa.infra.sololab"
 
   # config.vm.synced_folder "../../AnsibleWorkShop", "/var/vagrant/AnsibleWorkShop", type: "rsync", rsync__auto: true
   # config.vm.synced_folder "../../HelmWorkShop", "/var/vagrant/HelmWorkShop", type: "rsync", rsync__auto: true
@@ -45,6 +45,9 @@ Vagrant.configure("2") do |config|
   
   # set static ip
   config.vm.provision "shell", path: "Set-StaticIP.sh"
+  
+  # install packages
+  config.vm.provision "shell", path: "Install-Packages.sh"
   
   # reboot
   config.vm.provision "shell", reboot: true
