--- a/AnsibleWorkShop/Invoke-xanmanning.k3s.yml
+++ b/AnsibleWorkShop/Invoke-xanmanning.k3s.yml
@@ -11,37 +11,55 @@
 #       dest: ~/.ssh/vagrant
 #       mode: '0600'
 
-- hosts: kube-1
+# - hosts: localhost
+#   gather_facts: false
+#   vars:
+#     var_terraform_folder: "/TerraformWorkShop/Local/Certs"
+#   tasks:
+#     - name: Create selfsign CA
+#       block:
+#       - name: include_vars
+#         community.general.terraform:
+#           project_path: "{{ var_terraform_folder }}"
+#           force_init: true
+#           overwrite_init: false
+#           state: present
+      
+- hosts: kube-2
   gather_facts: yes
   tasks:
-  - name: Get k3s stable release version
-    ansible.builtin.uri:
-      url: https://rancher-mirror.oss-cn-beijing.aliyuncs.com/k3s/channels/stable
-      return_content: yes
-    register: cn_k3s_stable_version
-  # https://docs.ansible.com/ansible/latest/user_guide/playbooks_reuse_roles.html#including-roles-dynamic-reuse
-  - name: run role xanmanning.k3s
-    ansible.builtin.include_role:
-      name: xanmanning.k3s
-    vars:
-      # the process of k3s_api_releases is only fit for k3s' office web site https://update.k3s.io/v1-release/channels
-      # k3s_api_releases: https://rancher-mirror.oss-cn-beijing.aliyuncs.com/k3s/channels
-      k3s_github_download_url: https://rancher-mirror.oss-cn-beijing.aliyuncs.com/k3s
-      # rancher china mirror's k3s version naming connect with "-" instead of "+"
-      # e.g. you get k3s latest stable version from https://rancher-mirror.oss-cn-beijing.aliyuncs.com/k3s/channels/stable: v1.24.4+k3s1, 
-      # in order to download this version's binray, 
-      # the url should be https://rancher-mirror.oss-cn-beijing.aliyuncs.com/k3s/v1.24.4-k3s1/k3s
-      # ref https://rancher-mirror.oss-cn-beijing.aliyuncs.com/k3s/k3s-install.sh
-      k3s_release_version: "{{ cn_k3s_stable_version.content | replace('+', '-') | replace('\n', '') }}"
-      k3s_etcd_datastore: true
-      k3s_become: true
-      # https://github.com/PyratLabs/ansible-role-k3s/tree/v3_release#grouphost-variables
-      # https://rancher.com/docs/k3s/latest/en/installation/install-options/server-config/
-      k3s_server:
-        write-kubeconfig-mode: '0644'
-        write-kubeconfig: /home/vagrant/.kube/config 
-        tls-san:
-          - infra.sololab
-        disable:
-          - traefik
+    - name: Get k3s stable release version
+      ansible.builtin.uri:
+        url: https://rancher-mirror.oss-cn-beijing.aliyuncs.com/k3s/channels/stable
+        return_content: yes
+      register: cn_k3s_stable_version
+    # https://docs.ansible.com/ansible/latest/user_guide/playbooks_reuse_roles.html#including-roles-dynamic-reuse
+    - name: run role xanmanning.k3s
+      ansible.builtin.include_role:
+        name: xanmanning.k3s
+      vars:
+        k3s_state: installed
+        # the process of k3s_api_releases is only fit for k3s' office web site https://update.k3s.io/v1-release/channels
+        # k3s_api_releases: https://rancher-mirror.oss-cn-beijing.aliyuncs.com/k3s/channels
+        k3s_github_download_url: https://rancher-mirror.oss-cn-beijing.aliyuncs.com/k3s
+        # rancher china mirror's k3s version naming connect with "-" instead of "+"
+        # e.g. you get k3s latest stable version from https://rancher-mirror.oss-cn-beijing.aliyuncs.com/k3s/channels/stable: v1.24.4+k3s1, 
+        # in order to download this version's binray, 
+        # the url should be https://rancher-mirror.oss-cn-beijing.aliyuncs.com/k3s/v1.24.4-k3s1/k3s
+        # ref https://rancher-mirror.oss-cn-beijing.aliyuncs.com/k3s/k3s-install.sh
+        k3s_release_version: "{{ cn_k3s_stable_version.content | replace('+', '-') | replace('\n', '') }}"
+        k3s_etcd_datastore: true
+        k3s_become: true
+        # https://github.com/PyratLabs/ansible-role-k3s/tree/v3_release#grouphost-variables
+        # https://rancher.com/docs/k3s/latest/en/installation/install-options/server-config/
+        k3s_server:
+          write-kubeconfig-mode: '0644'
+          write-kubeconfig: /home/vagrant/.kube/config 
+          tls-san:
+            - infra.sololab
+          disable:
+            - traefik
 
+      # vars:
+      #   k3s_state: uninstalled
+      #   k3s_become: true
