--- a/AnsibleWorkShop/builder/with_proxy/context/Containerfile
+++ b/AnsibleWorkShop/builder/with_proxy/context/Containerfile
@@ -13,10 +13,9 @@ WORKDIR /build
 RUN git config --global http.proxy $PROXY && git config --global https.proxy $PROXY && \
     ansible-galaxy role install $ANSIBLE_GALAXY_CLI_ROLE_OPTS -r requirements.yml --roles-path "/usr/share/ansible/roles" && \
     git config --global --unset http.proxy && git config --global --unset https.proxy
-
-RUN export HTTPS_PROXY=${PROXY} HTTP_PROXY=${PROXY} https_proxy=${PROXY} http_proxy=${PROXY} && \
+RUN export HTTPS_PROXY=${PROXY} HTTP_PROXY=${PROXY} && \
     ANSIBLE_GALAXY_DISABLE_GPG_VERIFY=1 ansible-galaxy collection install $ANSIBLE_GALAXY_CLI_COLLECTION_OPTS -r requirements.yml --collections-path "/usr/share/ansible/collections" && \
-    unset HTTPS_PROXY && unset HTTP_PROXY && unset https_proxy && unset http_proxy
+    unset HTTPS_PROXY && unset HTTP_PROXY
 
 FROM $EE_BUILDER_IMAGE as builder
 ARG PROXY
@@ -34,15 +33,15 @@ RUN export HTTPS_PROXY=${PROXY} HTTP_PROXY=${PROXY} https_proxy=${PROXY} http_pr
 
 FROM $EE_BASE_IMAGE
 USER root
-ARG PROXY
 
 COPY --from=galaxy /usr/share/ansible /usr/share/ansible
 
 COPY --from=builder /output/ /output/
 RUN /output/install-from-bindep && rm -rf /output/wheels
+ARG PROXY
 ARG TERRAFORM_VERSION=1.3.6
-RUN export HTTPS_PROXY=${PROXY} HTTP_PROXY=${PROXY} https_proxy=${PROXY} && \ export http_proxy=${PROXY} && \ dnf install -y unzip && \ cd /tmp && \ curl -LO https://releases.hashicorp.com/terraform/$TERRAFORM_VERSION/terraform_${TERRAFORM_VERSION}_linux_amd64.zip && \ unzip terraform_${TERRAFORM_VERSION}_linux_amd64.zip && \ install -o root -g root -m 0755 terraform /usr/local/bin/terraform && \ unset HTTPS_PROXY && \ unset HTTP_PROXY &&\ unset https_proxy && \ unset http_proxy
-RUN export HTTPS_PROXY=${PROXY} && \ export HTTP_PROXY=${PROXY} && \ export https_proxy=${PROXY} && \ export http_proxy=${PROXY} && \ curl -L "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl" -o /usr/local/bin/kubectl && \ ls -al /usr/local/bin/kubectl && \ chmod 0755 /usr/local/bin/kubectl && \ unset HTTPS_PROXY && \ unset HTTP_PROXY &&\ unset https_proxy && \ unset http_proxy
-RUN export HTTPS_PROXY=${PROXY} && \ export HTTP_PROXY=${PROXY} && \ export https_proxy=${PROXY} && \ export http_proxy=${PROXY} && \ curl -L https://mirror.openshift.com/pub/openshift-v4/clients/helm/latest/helm-linux-amd64 -o /usr/local/bin/helm && \ chmod +x /usr/local/bin/helm  && \ unset HTTPS_PROXY && \ unset HTTP_PROXY &&\ unset https_proxy && \ unset http_proxy
-RUN git config --global http.proxy $PROXY && \ git config --global https.proxy $PROXY && \ export HTTPS_PROXY=${PROXY} && \ export HTTP_PROXY=${PROXY} && \ export https_proxy=${PROXY} && \ export http_proxy=${PROXY} && \ /usr/local/bin/helm plugin install https://github.com/databus23/helm-diff && \ git config --global --unset http.proxy && \ git config --global --unset https.proxy && \ unset HTTPS_PROXY && \ unset HTTP_PROXY &&\ unset https_proxy && \ unset http_proxy
+RUN export HTTPS_PROXY=${PROXY} HTTP_PROXY=${PROXY} https_proxy=${PROXY} && export http_proxy=${PROXY} && dnf install -y unzip && cd /tmp && curl -LO https://releases.hashicorp.com/terraform/$TERRAFORM_VERSION/terraform_${TERRAFORM_VERSION}_linux_amd64.zip && unzip terraform_${TERRAFORM_VERSION}_linux_amd64.zip && install -o root -g root -m 0755 terraform /usr/local/bin/terraform && unset HTTPS_PROXY && unset HTTP_PROXY && unset https_proxy && unset http_proxy
+RUN export HTTPS_PROXY=${PROXY} && export HTTP_PROXY=${PROXY} && export https_proxy=${PROXY} && export http_proxy=${PROXY} && curl -L "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl" -o /usr/local/bin/kubectl && ls -al /usr/local/bin/kubectl && chmod 0755 /usr/local/bin/kubectl && unset HTTPS_PROXY && unset HTTP_PROXY && unset https_proxy && unset http_proxy
+RUN export HTTPS_PROXY=${PROXY} && export HTTP_PROXY=${PROXY} && export https_proxy=${PROXY} && export http_proxy=${PROXY} && curl -L https://mirror.openshift.com/pub/openshift-v4/clients/helm/latest/helm-linux-amd64 -o /usr/local/bin/helm && chmod +x /usr/local/bin/helm  && unset HTTPS_PROXY && unset HTTP_PROXY &&\ unset https_proxy && unset http_proxy
+RUN export HTTPS_PROXY=${PROXY} && export HTTP_PROXY=${PROXY} && export https_proxy=${PROXY} && export http_proxy=${PROXY} && /usr/local/bin/helm plugin install https://github.com/databus23/helm-diff && unset HTTPS_PROXY && unset HTTP_PROXY && unset https_proxy && unset http_proxy
 LABEL ansible-execution-environment=true
