--- a/KubeWorkShop/Traefik/conf/dynamic/traefik-dashboard.yaml
+++ b/KubeWorkShop/Traefik/conf/dynamic/traefik-dashboard.yaml
@@ -2,16 +2,17 @@
 http:
   routers:
     dashboard:
-      rule: Host(`infra.sololab`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
+      rule: Host(`traefik.infra.sololab`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
       service: api@internal
       # https://www.teanote.pub/archives/247
       # https://doc.traefik.io/traefik/routing/routers/#tls
       # will terminate the TLS request
-      tls: true
+      tls: 
+        certResolver: freeipa
 
-tls:
-  stores:
-    default:
-      defaultCertificate:
-        certFile: /etc/traefik/dynamic/sololab_infra.crt
-        keyFile: /etc/traefik/dynamic/sololab_infra.key
+# tls:
+#   stores:
+#     default:
+#       defaultCertificate:
+#         certFile: /etc/traefik/dynamic/sololab_infra.crt
+#         keyFile: /etc/traefik/dynamic/sololab_infra.key
