--- a/VagrantWorkShop/InfraSvc-Alpine/Vagrantfile
+++ b/VagrantWorkShop/InfraSvc-Alpine/Vagrantfile
@@ -31,13 +31,16 @@ Vagrant.configure("2") do |config|
   
   config.vm.hostname = "InfraSvc-Alpine"
 
-  # config.vm.synced_folder "../../HelmWorkShop", "/var/vagrant/HelmWorkShop", type: "rsync", rsync__auto: true
+  config.vm.synced_folder "../../HelmWorkShop", "/var/vagrant/HelmWorkShop", type: "rsync", rsync__auto: true
   # config.vm.synced_folder "../../AnsibleWorkShop", "/var/vagrant/AnsibleWorkShop", type: "rsync", rsync__auto: true
 
   # set static ip for this VM
   config.vm.provision "file", source: "./interfaces.conf", destination: "/home/vagrant/interfaces"
   config.vm.provision "shell", inline: "sudo cp /home/vagrant/interfaces /etc/network/interfaces"
 
+  # install python
+  config.vm.provision "shell", path: "Add-Apks.sh"
+  
   # install k8s related tools
   # for alpine
   # config.vm.provision "shell", inline: "sudo apk add curl yq git ansible py3-pip helm helmfile"
