--- a/VagrantWorkShop/InfraSvc-Fedora37/Vagrantfile
+++ b/VagrantWorkShop/InfraSvc-Fedora37/Vagrantfile
@@ -46,14 +46,14 @@ Vagrant.configure("2") do |config|
   # set static ip
   config.vm.provision "shell", path: "Set-StaticIP.sh"
   
-  # install packages
-  config.vm.provision "shell", path: "Install-Packages.sh"
+  # update packages
+  config.vm.provision "shell", path: "Update-Packages.sh"
   
   # initialize cockpit
-  config.vm.provision "shell", path: "Initialize-Cockpit.sh"
+  config.vm.provision "shell", path: "Install-Cockpit.sh"
   
   # install podman
-  config.vm.provision "shell", path: "Initialize-Podman.sh"
+  # config.vm.provision "shell", path: "Install-Podman.sh"
   
   # reboot
   config.vm.provision "shell", reboot: true
