--- a/VagrantWorkShop/InfraSvc-Debian/Vagrantfile
+++ b/VagrantWorkShop/InfraSvc-Debian/Vagrantfile
@@ -16,7 +16,7 @@ Vagrant.configure("2") do |config|
 
   config.vm.provider "hyperv" do |hv, config|
     hv.vmname = "InfraSvc-Debian"
-    hv.memory = 1024
+    hv.memory = 2048
     hv.maxmemory = 4096
     hv.cpus = 2
     # config.trigger.before :'VagrantPlugins::HyperV::Action::StartInstance', type: :action do |trigger|
@@ -31,23 +31,29 @@ Vagrant.configure("2") do |config|
 
   config.vm.hostname = "InfraSvc-Debian"
 
-  config.vm.synced_folder "../../AnsibleWorkShop", "/var/vagrant/AnsibleWorkShop", type: "rsync", rsync__auto: true
-  config.vm.synced_folder "../../HelmWorkShop", "/var/vagrant/HelmWorkShop", type: "rsync", rsync__auto: true
-  config.vm.synced_folder "../../LocalWorkShop", "/var/vagrant/LocalWorkShop", type: "rsync", rsync__auto: true
+  # config.vm.synced_folder "../../AnsibleWorkShop", "/var/vagrant/AnsibleWorkShop", type: "rsync", rsync__auto: true
+  # config.vm.synced_folder "../../HelmWorkShop", "/var/vagrant/HelmWorkShop", type: "rsync", rsync__auto: true
+  # config.vm.synced_folder "../../LocalWorkShop", "/var/vagrant/LocalWorkShop", type: "rsync", rsync__auto: true
+  config.vm.synced_folder "../../KubeWorkShop", "/var/vagrant/KubeWorkShop", type: "rsync", rsync__auto: true
   
   # Install Prerequest packages
   config.vm.provision "shell", path: "Install-PreRquestPkg.sh"
+  
+  # Install cockpit
+  config.vm.provision "shell", path: "Install-Cockpit.sh"
 
   # Install helm
-  config.vm.provision "shell", path: "Install-Helm.sh"
+  # config.vm.provision "shell", path: "Install-Helm.sh"
 
   # set static ip for this VM
   # https://www.cyberciti.biz/faq/add-configure-set-up-static-ip-address-on-debianlinux/
   config.vm.provision "file", source: "./interfaces.conf", destination: "/home/vagrant/interfaces"
   config.vm.provision "shell", inline: "sudo cp /home/vagrant/interfaces /etc/network/interfaces"
   
+
+
   # set dns record for the cluster fqdn
-  config.vm.provision "shell", path: "Add-HostsResolve.sh"
+  # config.vm.provision "shell", path: "Add-HostsResolve.sh"
 
   # https://github.com/kurokobo/awx-on-k3s
   # for china
